# ransaq

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  crates.js  search-index.js  settings.html  source-files.js  sqlx-data.json
.github/workflows/: rust.yml
doc/: search-index.js  settings.html
doc/ransaq/: fn.setup.html
doc/ransaq/crawler/: fn.crawl.html  fn.persist_product.html  index.html
doc/ransaq/db/: fn.to_value_list.html  sidebar-items.js  struct.ProductUpsertFields.html
doc/ransaq/saq/: constant.DEFAULT_USER_AGENT.html  index.html  sidebar-items.js  struct.Category.html  struct.Client.html
doc/src/ransaq/: main.rs.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Deserialize.js
migrations/: 20220101200410_initial_schema.down.sql  20220101200410_initial_schema.up.sql
ransaq/: all.html  fn.main.html  fn.setup.html  index.html  sidebar-items.js
ransaq/crawler/: fn.crawl.html  fn.persist_product.html  index.html  sidebar-items.js
ransaq/db/: fn.sqlite_configuration.html  fn.to_value_list.html  index.html  macro.generate_upserts_by_name!.html  macro.generate_upserts_by_name.html  sidebar-items.js  struct.Client.html  struct.ProductUpsertFields.html
ransaq/saq/: constant.DEFAULT_USER_AGENT.html  fn.extract_detailed_info.html  fn.extract_linked_data.html  index.html  sidebar-items.js  struct.Category.html  struct.Client.html  struct.ExtractedProduct.html
src/: main.rs
src/crawler/: mod.rs
src/db/: glue.rs  mod.rs
src/ransaq/: main.rs.html
src/saq/: detailed_info.rs  linked_data.rs  mod.rs
(+60 files in other folders)
