[package]
name = "ransaq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# axum = "0.4.3"
dotenv = "0.15.0"
# maud = "0.23.0"
reqwest = { version = "0.11.8", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.130", features = ["derive"] }
sqlx = { version = "0.5.10", features = [ "runtime-tokio-rustls", "sqlite", "offline" ] }
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros", "parking_lot"] }
# tower-http = { version = "0.2.0", features = ["trace"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
scraper = "0.12.0"
serde_json = "1.0.71"
futures-util = "0.3.17"
color-eyre = "0.5.11"
regex = "1.5.4"
async-channel = "1.6.1"
lazy_static = "1.4.0"

[dev-dependencies]
paste = "1.0.6"
