[package]
name = "ransaq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.145", features = ["derive"] }
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "sqlite", "offline" ] }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "parking_lot"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
scraper = "0.13.0"
serde_json = "1.0.85"
futures-util = "0.3.24"
color-eyre = "0.6.2"
regex = "1.6.0"
async-channel = "1.7.1"
lazy_static = "1.4.0"

[dev-dependencies]
paste = "1.0.9"
